--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-opener": "^2.2.2",
     "@uppy/dashboard": "^4.1.3",
     "@uppy/file-input": "^4.0.4",
-    "@uppy/svelte": "^4.1.1"
+    "@uppy/svelte": "^4.1.1",
+    "dexie": "^4.0.10"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -29,7 +31,7 @@
     "svelte": "^5.16.0",
     "svelte-check": "^4.1.1",
     "tailwindcss": "^4.0.0-beta.8",
-    "typescript": "^5.7",
+    "typescript": "^5.7.2",
     "vite": "^6.0.6"
   }
 }
