--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2.1.1",
-    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-dialog": "~2.2.0",
     "@tauri-apps/plugin-opener": "^2.2.2",
     "@uppy/dashboard": "^4.1.3",
     "@uppy/file-input": "^4.0.4",
@@ -28,6 +28,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.0-beta.8",
     "@tauri-apps/cli": "^2.1.0",
+    "lucide-svelte": "^0.469.0",
     "svelte": "^5.16.0",
     "svelte-check": "^4.1.1",
     "tailwindcss": "^4.0.0-beta.8",
