--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rust-s3 = "0.35.1"
 tauri-plugin-dialog = "2"
+mime_guess = "2.0.5"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
