--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1"
 rust-s3 = "0.35.1"
 tauri-plugin-dialog = "2"
 mime_guess = "2.0.5"
+tauri-plugin-clipboard-manager = "2.2.0"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
