--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,14 +18,18 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+tokio = { version = "1.0", features = ["full"] }
+
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-rust-s3 = "0.35.1"
+rust-s3 = "0.36.0-beta.2"
 tauri-plugin-dialog = "2"
 mime_guess = "2.0.5"
 tauri-plugin-clipboard-manager = "2.2.0"
+sysproxy = "0.3.0"
+reqwest = "0.12.12"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
