--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,9 +27,9 @@ serde_json = "1"
 rust-s3 = "0.36.0-beta.2"
 tauri-plugin-dialog = "2"
 mime_guess = "2.0.5"
-tauri-plugin-clipboard-manager = "2.2.0"
 sysproxy = "0.3.0"
 reqwest = "0.12.12"
+tauri-plugin-clipboard = "2.1.11"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
