--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.0-beta.8",
     "@tauri-apps/cli": "^2.1.0",
+    "bits-ui": "^0.22.0",
     "lucide-svelte": "^0.469.0",
     "svelte": "^5.16.0",
     "svelte-check": "^4.1.1",
