--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "tauri": "tauri",
-    "format": "biome format --write ./src"
+    "format": "prettier --write ./src"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,7 +21,6 @@
     "tauri-plugin-clipboard-api": "^2.1.11"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.15.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -29,6 +28,9 @@
     "@tauri-apps/cli": "^2.1.0",
     "bits-ui": "^0.22.0",
     "lucide-svelte": "^0.469.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "svelte": "^5.16.0",
     "svelte-check": "^4.1.1",
     "tailwindcss": "^4.0.0-beta.8",
