--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,10 @@ mime_guess = "2.0.5"
 sysproxy = "0.3.0"
 reqwest = "0.12.12"
 tauri-plugin-clipboard = "2.1.11"
+tokio-util = "0.7.13"
+uuid = "1.11.0"
+dashmap = "6.1.0"
+once_cell = "1.20.2"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
