--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "svelte": "^5.16.1",
     "svelte-check": "^4.1.1",
+    "svelte-dnd-action": "^0.9.54",
     "tailwindcss": "^4.0.0-beta.8",
     "typescript": "^5.7.2",
     "vite": "^6.0.7"
