--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ reqwest = "0.12.12"
 tauri-plugin-clipboard = "2.1.11"
 tokio-util = "0.7.13"
 uuid = "1.11.0"
+base64 = "0.21.0"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
