--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/plugin-dialog": "~2.2.0",
     "@tauri-apps/plugin-opener": "^2.2.2",
     "dexie": "^4.0.10",
+    "sveltekit-i18n": "^2.4.2",
     "tauri-plugin-clipboard-api": "^2.1.11"
   },
   "devDependencies": {
