--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide && vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "tauri": "tauri",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide"
   },
   "license": "MIT",
   "dependencies": {
@@ -18,7 +19,6 @@
     "@tauri-apps/plugin-dialog": "~2.2.0",
     "@tauri-apps/plugin-opener": "^2.2.2",
     "dexie": "^4.0.10",
-    "sveltekit-i18n": "^2.4.2",
     "tauri-plugin-clipboard-api": "^2.1.11"
   },
   "devDependencies": {
@@ -38,6 +38,7 @@
     "svelte-dnd-action": "^0.9.54",
     "tailwindcss": "^4.0.0-beta.8",
     "typescript": "^5.7.2",
-    "vite": "^6.0.7"
+    "vite": "^6.0.7",
+    "@inlang/paraglide-js": "1.11.7"
   }
 }
