--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,7 +26,6 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-rust-s3 = "0.36.0-beta.2"
 tauri-plugin-dialog = "2"
 mime_guess = "2.0.5"
 sysproxy = "0.3.0"
@@ -35,6 +34,8 @@ tauri-plugin-clipboard = "2.1.11"
 tokio-util = "0.7.13"
 uuid = "1.11.0"
 base64 = "0.21.0"
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-s3 = "1.68.0"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
