--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ uuid = "1.11.0"
 base64 = "0.21.0"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.68.0"
+aws-smithy-client = "0.60.3"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
