--- a/.github/workflows/release-tauri.yaml
+++ b/.github/workflows/release-tauri.yaml
@@ -1,9 +1,9 @@
-name: 'publish'
+name: "publish"
 
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
 
 jobs:
@@ -14,14 +14,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'macos-latest' # for Arm based macs (M1 and above).
-            args: '--target aarch64-apple-darwin'
-          - platform: 'macos-latest' # for Intel based macs.
-            args: '--target x86_64-apple-darwin'
-          - platform: 'ubuntu-22.04'
-            args: ''
-          - platform: 'windows-latest'
-            args: ''
+          - platform: "macos-latest" # for Arm based macs (M1 and above).
+            args: "--target aarch64-apple-darwin"
+          - platform: "macos-latest" # for Intel based macs.
+            args: "--target x86_64-apple-darwin"
+          - platform: "ubuntu-22.04"
+            args: ""
+          - platform: "windows-latest"
+            args: ""
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -42,10 +42,9 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04' # This must match the platform value defined above.
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf base-devel
-          # Install makepkg for Arch Linux package building
-          sudo apt-get install -y pacman
-          sudo ln -s /usr/bin/pacman /usr/bin/makepkg
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+        # webkitgtk 4.0 is for Tauri v1 - webkitgtk 4.1 is for Tauri v2.
+        # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
 
       - name: install frontend dependencies
         run: bun install # change this to npm, pnpm or bun depending on which one you use.
@@ -55,40 +54,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tagName: r2uploader-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
-          releaseName: 'v__VERSION__'
-          releaseBody: 'See the assets to download this version and install.'
+          releaseName: "v__VERSION__"
+          releaseBody: "See the assets to download this version and install."
           releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
-
-      - name: Build Arch Linux package
-        if: matrix.platform == 'ubuntu-22.04'
-        run: |
-          # Create PKGBUILD
-          cat <<EOL > PKGBUILD
-          pkgname=r2uploader
-          pkgver=$(bun -p "require('./package.json').version")
-          pkgrel=1
-          pkgdesc="R2Uploader application"
-          arch=('x86_64')
-          license=('custom')
-          depends=('webkit2gtk' 'librsvg' 'libappindicator-gtk3')
-          source=("r2uploader-\${pkgver}.tar.gz")
-          sha256sums=('SKIP')
-
-          build() {
-            cd "\${srcdir}/r2uploader-\${pkgver}"
-            bun install
-            bun run build
-          }
-
-          package() {
-            cd "\${srcdir}/r2uploader-\${pkgver}"
-            mkdir -p "\${pkgdir}/usr/bin"
-            cp -r dist/* "\${pkgdir}/usr/bin/"
-          }
-          EOL
-
-          # Build package
-          makepkg -s --noconfirm
-          mv *.pkg.tar.zst r2uploader.pkg.tar.zst
