--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "~2.2.0",
     "@tauri-apps/plugin-opener": "^2.2.4",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "dexie": "^4.0.10",
     "tauri-plugin-clipboard-api": "^2.1.11"
   },
