--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,15 +28,17 @@ serde_json = "1"
 tauri-plugin-dialog = "2"
 mime_guess = "2.0.5"
 sysproxy = "0.3.0"
-tauri-plugin-clipboard = "2.1.11"
 tokio-util = "0.7.13"
 uuid = "1.11.0"
 base64 = "0.22"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
 aws-smithy-runtime = "1.7.6"
-hyper-proxy = { version = "0.9.1", default-features = false }
+hyper-proxy = { version = "0.9.1", default-features = false, features = ["rustls"] }
 hyper = { version = "0.14", features = ["client"] }
+
+[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
+tauri-plugin-clipboard = "2.1.11"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
