--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "~2.2.0",
     "@tauri-apps/plugin-opener": "^2.2.4",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
-    "dexie": "^4.0.10",
+    "dexie": "^4.0.11",
+    "dompurify": "^3.2.3",
+    "marked": "^15.0.6",
     "tauri-plugin-clipboard-api": "^2.1.11"
   },
   "devDependencies": {
@@ -28,12 +31,12 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.0-beta.9",
     "@tauri-apps/cli": "^2.2.4",
-    "bits-ui": "^0.22.0",
+    "bits-ui": "0.21.10",
     "daisyui": "^5.0.0-beta.1",
-    "lucide-svelte": "^0.469.0",
+    "lucide-svelte": "^0.471.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "svelte": "^5.18.0",
     "svelte-check": "^4.1.4",
     "svelte-dnd-action": "^0.9.54",
