--- a/.github/workflows/release-tauri.yaml
+++ b/.github/workflows/release-tauri.yaml
@@ -48,6 +48,9 @@ jobs:
 
       - name: install frontend dependencies
         run: bun install # change this to npm, pnpm or bun depending on which one you use.
+      
+      - name: icon generation
+        run: bun tauri icon static/favicon.png
 
       - uses: tauri-apps/tauri-action@v0
         env:
