--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.0-beta.9",
     "@tauri-apps/cli": "^2.2.4",
+    "@types/marked": "^6.0.0",
     "bits-ui": "0.21.10",
     "daisyui": "^5.0.0-beta.1",
     "lucide-svelte": "^0.471.0",
