--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ aws-smithy-runtime = "1.7.6"
 hyper-proxy = { version = "0.9.1", default-features = false, features = ["rustls"] }
 hyper = { version = "0.14", features = ["client"] }
 futures = "0.3.31"
+tauri-plugin-os = "2"
 
 [target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
 tauri-plugin-clipboard = "2.1.11"
