--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "r2uploader"
-version = "1.0.2"
-description = "A Tauri App"
-authors = ["you"]
+version = "1.0.3"
+description = "Upload Files to Cloudflare R2"
+authors = ["ZeroRust"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -34,7 +34,9 @@ base64 = "0.22"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = { version = "1.69", features = ["behavior-version-latest"] }
 aws-smithy-runtime = "1.7.6"
-hyper-proxy = { version = "0.9.1", default-features = false, features = ["rustls"] }
+hyper-proxy = { version = "0.9.1", default-features = false, features = [
+    "rustls",
+] }
 hyper = { version = "0.14", features = ["client"] }
 futures = "0.3.31"
 tauri-plugin-os = "2"
