--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/api": "^2.3.0",
     "@tauri-apps/plugin-dialog": "~2.2.0",
-    "@tauri-apps/plugin-opener": "^2.2.5",
+    "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-os": "~2.2.0",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
@@ -31,22 +31,22 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.17.3",
+    "@sveltejs/kit": "^2.18.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.9",
-    "@tauri-apps/cli": "^2.3.0",
+    "@tauri-apps/cli": "^2.3.1",
     "@types/marked": "^6.0.0",
     "bits-ui": "0.21.10",
-    "daisyui": "^5.0.0-beta.9",
+    "daisyui": "^5.0.0",
     "lucide-svelte": "^0.471.0",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.20.5",
+    "svelte": "^5.22.3",
     "svelte-check": "^4.1.4",
     "svelte-dnd-action": "^0.9.57",
     "tailwindcss": "^4.0.9",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.2",
     "vite": "^6.2.0"
   }
 }
